# ml_tutorial

./: .gitignore  babel.config.json  index.html  package-lock.json  package.json  vite.config.js
mnist_lab/: ARTICLE.md  README.md  pyproject.toml
mnist_lab/assets/: README.md  sample_digit.pgm
mnist_lab/src/mnist_lab/: __init__.py  config.py  data.py  inspect.py  main.py  model.py  predict.py  trainer.py
plugins/reveal.js-plugins/: package.json
public/: index.html  notes.html  notes.js
src/: App.js  App.jsx  index.css
src/Animation/: AutoTool.js  AutoTool.jsx  ContourLoss.js  ContourLoss.jsx  ConvolutionDemo.jsx  ManualTool.js  ManualTool.jsx  MnistPipelineDiagram.jsx  PoolingDemo.jsx  TensorShapeDiagram.jsx  ToggleForward.js  ToggleForward.jsx  Typeset.js  Typeset.jsx  exports.js  line.css
src/Animation/subComponents/: AnimatedScatterPlot.js  Arrow.js  Loss.jsx  NeuralNetworkComponent.jsx  ScatterPlot.jsx  d3.css
src/Components/: Title.js
src/Components/Highlight/: BaseHighlight.jsx  Python.jsx
src/Components/RevealComponents/: Deck.js  Deck.jsx  Slide.jsx  revealOptions.js
src/Plugins/: revealChalkboard.js  revealCustomControls.js  revealFullscreen.js
src/Slides/: CSSAnimationSlide.js  ClosingSlides.jsx  IntroSlides.js  IntroSlides.jsx  Layout.js  Layout.jsx  List.js  List.jsx  MnistSlides.jsx  TitleSlide.js  TitleSlide.jsx  index.js  index.jsx
src/Themes/: override.css
